@@ -617,7 +617,7 @@ Inside the bucardo database, the <b>bucardo_config</b> table holds many settings
 <tr>
 <td class="lcol" >mcp_loop_sleep</td> <td>0.1</td> <td>How long does the main MCP daemon sleep between loops?</td> </tr>
 <tr>
-<td class="lcol" >mcp_dbproblem_sleep</td> <td>15</td> <td>How many seconds to sleep before trying to respawn</td> </tr>
+<td class="lcol" >mcp_dbproblem_sleep</td> <td>15</td> <td>How many seconds to sleep before trying to respawn? Set to 0 to prevent respawn attempts</td> </tr>
 <tr>
 <td class="lcol" >ctl_nothingfound_sleep</td> <td>1.0</td> <td>How long does the controller loop sleep if nothing is found?</td> </tr>
 <tr>
